--- a/jaxb-api/src/main/resources/jakarta/xml/bind/Messages.properties
+++ b/jaxb-api/src/main/resources/jakarta/xml/bind/Messages.properties
@@ -12,7 +12,7 @@ ContextFinder.ProviderNotFound = \
 	Provider {0} not found
 
 ContextFinder.DefaultProviderNotFound = \
-	Implementation of JAXB-API has not been found on module path or classpath.
+	Implementation of Jakarta XML Binding-API has not been found on module path or classpath.
 	
 ContextFinder.CouldNotInstantiate = \
 	Provider {0} could not be instantiated: {1}	
@@ -21,7 +21,7 @@ ContextFinder.CantFindPropertiesFile = \
 	Unable to locate jaxb.properties for package {0}
 	
 ContextFinder.CantMixProviders = \
-	You may not mix JAXB Providers on the context path
+	You may not mix Jakarta XML Binding Providers on the context path
 	
 ContextFinder.MissingProperty = \
 	jaxb.properties in package {0} does not contain the {1} property.
@@ -44,4 +44,4 @@ JAXBContext.IllegalCast = \
     ClassCastException: attempting to cast {0} to {1}.  Please make sure that you are specifying the proper ClassLoader.    
 
 JAXBClasses.notOpen = \
-    Package {0} with JAXB class {1} defined in a module {2} must be open to at least java.xml.bind module.
+    Package {0} with Jakarta XML Binding class {1} defined in a module {2} must be open to at least jakarta.xml.bind module.
